--- a/tooling/cli.rs/Cargo.toml
+++ b/tooling/cli.rs/Cargo.toml
@@ -48,7 +48,8 @@ tempfile = "3"
 zeroize = "1.4"
 
 [target."cfg(windows)".dependencies]
-winapi = { version = "0.3", features = [ "winbase", "winuser", "consoleapi", "processenv", "wincon" ] }
+webview2-com-sys = { path = "../../../webview2-rs/crates/bindings" }
+windows = "0.19.0"
 encode_unicode = "0.3"
 
 [target."cfg(target_os = \"linux\")".dependencies]
